--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -96,25 +96,6 @@
     font-weight: 600;
 }
 
-
-.main-title {
-    position: fixed;
-    top: 0;
-    left: 18%;
-    width: 100%;
-    height: 5vh;
-    line-height: 5vh;
-    border-bottom: 1px solid #ddd;
-}
-
-.main-title h4 {
-    display: block;
-    font-size: 1rem;
-    font-weight: 500;
-    color: #1e3a5f;
-    margin-left: 10px;
-}
-
 .left-section .left .section2 ul li.selected {
     background: rgba(30, 58, 95, 0.7);
 }
@@ -345,4 +326,11 @@
 .downBtn button:hover {
     background: #1e3a5f;
     transition: all .3s;
+}
+
+
+@media screen and (max-width: 1024px) {
+    .main {
+        margin-left: 25vw;
+    }
 }
